--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/wheel-selector": "^5.17.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "cordova-sqlite-storage": "^3.4.0",
+    "cordova-wheel-selector-plugin": "1.1.4",
     "core-js": "^2.5.4",
     "ng-tags-input": "^3.2.0",
     "rxjs": "~6.5.1",
@@ -62,7 +64,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-wheel-selector-plugin": {}
     }
   }
 }
