--- a/package.json
+++ b/package.json
@@ -14,18 +14,25 @@
   "private": true,
   "dependencies": {
     "@angular/common": "~8.1.2",
-    "@angular/core": "~8.1.2",
-    "@angular/forms": "~8.1.2",
+    "@angular/core": "^8.1.3",
+    "@angular/forms": "^8.1.3",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
-    "@angular/router": "~8.1.2",
+    "@angular/router": "^8.1.3",
     "@auth0/angular-jwt": "^3.0.1",
+    "@capacitor/core": "1.4.0",
+    "@capacitor/ios": "^1.4.0",
+    "@ionic-native/camera": "^5.19.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/file": "^5.19.0",
+    "@ionic-native/ionic-webview": "^5.19.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/wheel-selector": "^5.17.0",
-    "@ionic/angular": "^4.7.1",
+    "@ionic/angular": "^5.0.0-rc.3",
     "@ionic/storage": "^2.2.0",
+    "cordova-ios": "^5.1.1",
+    "cordova-plugin-camera": "^4.1.0",
     "cordova-sqlite-storage": "^3.4.0",
     "cordova-wheel-selector-plugin": "1.1.4",
     "core-js": "^2.5.4",
@@ -44,11 +51,18 @@
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
+    "@capacitor/cli": "1.4.0",
     "@ionic/angular-toolkit": "~2.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -65,7 +79,18 @@
   "cordova": {
     "plugins": {
       "cordova-sqlite-storage": {},
-      "cordova-wheel-selector-plugin": {}
-    }
+      "cordova-wheel-selector-plugin": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file": {}
+    },
+    "platforms": [
+      "ios"
+    ]
   }
 }
